--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1673,3 +1673,4 @@ store.form.storeGLN.label: Store GLN
 store.form.storeGLN.help: Find the GLN number on <a href="https://www.gs1.org/services/verified-by-gs1" target="_blank">GS1 website</a>
 form.settings.company_gln.label: Company GLN
 form.task.barcode.label: Barcode
+form.settings.mercadopago.prefer_mercadopago.label: Use MercadoPago as the preferred payment gateway
