Validate that at least one payment gateway is configured.

--- a/translations/validators.en.yml
+++ b/translations/validators.en.yml
@@ -76,3 +76,4 @@ siret.invalid: Invalid SIRET number
 siret.head_office: You must provide an establishment SIRET number, not head office.
 
 form.package_set.duplicatePackageNames: Package names must be unique in a package set
+restaurant.paygreenShopId.notSet: Configure the Paygreen Shop ID
