added: french and spanish translations

--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -1771,3 +1771,12 @@ form.settings.paygreen_secret_key.label: Paygreen secret key
 form.settings.paygreen_shop_id.label: Paygreen Shop ID
 restaurant.form.paygreen_shop_id.label: Paygreen Shop ID
 form.local_business.paygreen_account.title: Paygreen account
+order.items_total_excluding_tax: Total de productos (sin IVA)
+basics.more: Más
+adminDashboard.invoicing.title: Facturación [PREVISUALIZACIÓN]
+adminDashboard.invoicing.help: "Preparar facturas"
+adminDashboard.invoicing.line_item.order_number: "Pedido #%number%"
+form.settings.on_demand_delivery_product_name.label: "Nombre del producto"
+form.settings.on_demand_delivery_product_name.help: "El nombre que aparecerá en el resumen del pedido y en la factura"
+form.settings.accounting_account.label: "Código contable"
+form.settings.accounting_account.help: "El código contable predeterminado para registrar los pedidos de entrega a demanda en el sistema contable."
