added: french and spanish translations

--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -632,6 +632,29 @@
         "DELIVERY_FORM_OLD_PRICE": "Precio anterior",  
         "DELIVERY_FORM_TRACKING_LINK": "Enlace de seguimiento",  
         "DELIVERY_FROM_TRACKING_LINK_COPY": "Copiar enlace de seguimiento",
-        "SHOW_BARCODES": "Ver los códigos de barras"
+        "SHOW_BARCODES": "Ver los códigos de barras",
+        "ADMIN_INVOICING_TITLE": "Facturación [PREVISUALIZACIÓN]",
+        "ADMIN_ORDERS_TO_INVOICE_TITLE": "Pedidos a facturar",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE": "Período",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE_SIMPLE": "Seleccionar mes",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE_COMPLEX": "Seleccionar período personalizado",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_STATUS": "Estado",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_STATUS_NOT_INVOICED": "Solo no facturados",
+        "ADMIN_ORDERS_TO_INVOICE_REFRESH": "Actualizar",
+        "ADMIN_ORDERS_TO_INVOICE_DOWNLOAD": "Descargar",
+        "ADMIN_ORDERS_TO_INVOICE_ORGANIZATION_LABEL": "Organización (número de pedidos)",
+        "ADMIN_ORDERS_TO_INVOICE_ORDER_NUMBER_LABEL": "Pedido #",
+        "ADMIN_ORDERS_TO_INVOICE_DATE_LABEL": "Fecha",
+        "ADMIN_ORDERS_TO_INVOICE_DESCRIPTION_LABEL": "Descripción",
+        "ADMIN_ORDERS_TO_INVOICE_SUB_TOTAL_LABEL": "Subtotal (sin IVA)",
+        "ADMIN_ORDERS_TO_INVOICE_TAXES_LABEL": "Impuestos",
+        "ADMIN_ORDERS_TO_INVOICE_TOTAL_LABEL": "Total (con IVA)",
+        "ADMIN_ORDERS_TO_INVOICE_EXPORTS_LABEL": "Estado",
+        "ADMIN_ORDERS_TO_INVOICE_EXPORTED": "Exportado en archivo(s):",
+        "ADMIN_ORDERS_TO_INVOICE_NOT_EXPORTED": "No facturado",
+        "ADMIN_ORDERS_TO_INVOICE_FILE_FORMAT": "Formato de archivo",
+        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_STANDARD": "Estándar (CSV)",
+        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_ODOO": "Odoo (CSV)",
+        "VIEW": "Ver"
     }
 }
