--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -634,6 +634,29 @@
         "DELIVERY_FORM_OLD_PRICE" : "Ancien prix", 
         "DELIVERY_FORM_TRACKING_LINK" : "Lien de suivi", 
         "DELIVERY_FROM_TRACKING_LINK_COPY" : "Copier le lien de suivi",
-        "SHOW_BARCODES" : "Voir les codes-barres"
+        "SHOW_BARCODES" : "Voir les codes-barres",
+        "ADMIN_INVOICING_TITLE": "Facturation [APERÇU]",
+        "ADMIN_ORDERS_TO_INVOICE_TITLE": "Commandes à facturer",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE": "Période",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE_SIMPLE": "Sélectionner le mois",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE_COMPLEX": "Sélectionner une période personnalisée",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_STATUS": "Statut",
+        "ADMIN_ORDERS_TO_INVOICE_FILTER_STATUS_NOT_INVOICED": "Seulement non facturées",
+        "ADMIN_ORDERS_TO_INVOICE_REFRESH": "Actualiser",
+        "ADMIN_ORDERS_TO_INVOICE_DOWNLOAD": "Télécharger",
+        "ADMIN_ORDERS_TO_INVOICE_ORGANIZATION_LABEL": "Organisation (nombre de commandes)",
+        "ADMIN_ORDERS_TO_INVOICE_ORDER_NUMBER_LABEL": "Commande #",
+        "ADMIN_ORDERS_TO_INVOICE_DATE_LABEL": "Date",
+        "ADMIN_ORDERS_TO_INVOICE_DESCRIPTION_LABEL": "Description",
+        "ADMIN_ORDERS_TO_INVOICE_SUB_TOTAL_LABEL": "Sous-total (hors TVA)",
+        "ADMIN_ORDERS_TO_INVOICE_TAXES_LABEL": "Taxes",
+        "ADMIN_ORDERS_TO_INVOICE_TOTAL_LABEL": "Total (TTC)",
+        "ADMIN_ORDERS_TO_INVOICE_EXPORTS_LABEL": "Statut",
+        "ADMIN_ORDERS_TO_INVOICE_EXPORTED": "Exporté dans le(s) fichier(s) :",
+        "ADMIN_ORDERS_TO_INVOICE_NOT_EXPORTED": "Non facturé",
+        "ADMIN_ORDERS_TO_INVOICE_FILE_FORMAT": "Format de fichier",
+        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_STANDARD": "Standard (CSV)",
+        "ADMIN_ORDERS_TO_INVOICE_DESTINATION_ODOO": "Odoo (CSV)",
+        "VIEW": "Voir"
     }
 }
