--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -663,6 +663,7 @@
         "DELIVERY_FORM_OLD_PRICE": "Old price",  
         "DELIVERY_FORM_TRACKING_LINK": "Tracking link",  
         "DELIVERY_FROM_TRACKING_LINK_COPY": "Copy tracking link",
-        "SHOW_BARCODES": "View barcodes"
+        "SHOW_BARCODES": "View barcodes",
+        "SWITCH_TIMESLOTPICKER": "Select a custom time slot"
       }
 }
