Improve zero waste text. Fixes #3985.

--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -406,8 +406,8 @@
         "RECURRENCE_RULE_DAYS_REQUIRED": "Veuillez choisir au moins un jour",
         "SUBSCRIPTION_CANCELLED": "Règle de récurrence annulée",
         "CART_ENABLE_ZERO_WASTE": "Activer l'option zéro déchet",
-        "CART_ZERO_WASTE_POPUP_TEXT": "Bravo, votre panier contient un plat éligible à la livraison zéro-déchet avec notre partenaire « {{name}} ». Faites-vous livrer en boîtes consignées et retournez vos boîtes partout dans le réseau « {{name}} » ou à votre coursier à la prochaine commande. Vous pouvez désactiver cette option à tout moment.",
-        "CART_ZERO_WASTE_POPUP_TEXT_WITH_FEE": "Bravo, votre panier contient un plat éligible à la livraison zéro-déchet avec notre partenaire « {{name}} ». Faites-vous livrer en boîtes consignées et retournez vos boîtes gratuitement partout dans le réseau « {{name}} » ou à votre coursier à la prochaine commande (frais {{amount}}). Vous pouvez désactiver cette option à tout moment.",
+        "CART_ZERO_WASTE_POPUP_TEXT": "<p>Bravo !<br/>Votre panier contient un plat éligible à la livraison zéro-déchet avec notre partenaire « {{name}} ».</p><p>Faites-vous livrer en boîtes consignées et retournez vos boîtes partout dans le réseau « {{name}} » ou à votre coursier à la prochaine commande.</p><p>Vous pouvez désactiver le système de consigne à tout moment.</p>",
+        "CART_ZERO_WASTE_POPUP_TEXT_WITH_FEE": "<p>Bravo!<br/>Votre panier contient un plat éligible à la livraison zéro-déchet avec notre partenaire « {{name}} ».!<br/>Faites-vous livrer en boîtes consignées et retournez vos boîtes gratuitement partout dans le réseau « {{name}} » ou à votre coursier à la prochaine commande (frais {{amount}}).</p><p>Vous pouvez désactiver le système de consigne à tout moment.</p>",
         "LEARN_MORE": "En savoir plus",
         "I_UNDERSTAND": "Jʼai compris",
         "CART_LOOPEAT_MODAL_TOTAL_DEPOSIT": "Total consigne de la commande",
