--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -619,7 +619,7 @@
         "DELIVERY_FORM_ERROR_HOUR": "Le retrait doit être avant le dépôt",
         "DELIVERY_FORM_CONTACT_PLACEHOLDER": "Contact",
         "DELIVERY_FORM_REMEMBER_ADDRESS": "Se souvenir de cette adresse",
-        "DELIVERY_FORM_TOTAL_PRICE": "Prix total",
+        "DELIVERY_FORM_TOTAL_PRICE": "Prix",
         "DELIVERY_FORM_TOTAL_VAT": "TTC",
         "DELIVERY_FORM_TOTAL_EX_VAT": "HT",
         "DELIVERY_FORM_REMOVE_DROPOFF": "Retirer ce dépôt", 
