--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1375,6 +1375,7 @@ profile.delete_my_account: "Supprimer mon compte"
 profile.type_username_to_confirm: "Saisissez votre nom d'utilisateur pour confirmer la suppression du compte"
 form.pricing_rule_set.options.label: Options
 form.pricing_rule_set.options.map_all_tasks.label: Appliquer à toutes les tâches
+form.pricing_rule_set.options.map_all_tasks.help: À utiliser avec prudence! S'applique uniquement si la methode de calcul est "Toutes les tâches qui correspondent". Quand ce mode est activé, chaque règle sera evaluée sur chaque tâche, et non sur l'objet de livraison entier. Par exemple, la règle "distance" n'a aucun effet ici, car une tâche considéré seule n'a pas de distance associée.
 form.settings.notifications.title: Notifications
 form.settings.notifications.order.created: Commande créée
 form.settings.notifications.order.accepted: Commande acceptée
