--- a/js/app/i18n/locales/cs.json
+++ b/js/app/i18n/locales/cs.json
@@ -195,6 +195,7 @@
         "ORDER_LIST_PICKUP_TIME": "Čas vyzvednutí",
         "ORDER_LIST_PREPARATION_TIME": "Čas přípravy",
         "ORDER_LIST_STATE": "Stav",
+        "PRICING_ADD_RULE": "Přidat pravidlo",
         "RULE_PICKER_LINE_OPTGROUP_ORDER": "Objednávka",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Doručení",
         "RULE_PICKER_LINE_ORDER_ITEMS_TOTAL": "Celkem položek",
