--- a/js/app/i18n/locales/pt_BR.json
+++ b/js/app/i18n/locales/pt_BR.json
@@ -132,6 +132,7 @@
         "ORDER_TIMELINE_AFTER_CREATED_DESCRIPTION": "O restaurante deve confirmar o seu pedido. Em caso de recusa nenhum valor será debitado do seu cartão.",
         "ORDER_TIMELINE_AFTER_PICKED_TITLE": "A entrega está a caminho!",
         "ORDER_TIMELINE_AFTER_PICKED_DESCRIPTION": "Prepare-se!",
+        "PRICING_ADD_RULE": "Adicionar regra",
         "RULE_PICKER_ADD_CONDITION": "Adicionar condição",
         "RULE_PICKER_LINE_DISTANCE": "Distância (km)",
         "RULE_PICKER_LINE_WEIGHT": "Peso (kg)",
