--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -253,8 +253,8 @@
         "ORDER_TIMELINE_AFTER_PICKED_DESCRIPTION": "Get ready!",
         "PRICING_ADD_RULE": "Add rule",
         "PRICING_ADD_RULE_PER_TASK": "Add rule per point (advanced)",
-        "RULE_TARGET_DELIVERY": "Per order",
-        "RULE_TARGET_TASK": "Per point (PICKUP and/or DROPOFF task)",
+        "RULE_TARGET_DELIVERY": "Apply per order if:",
+        "RULE_TARGET_TASK": "Apply per each point (PICKUP and/or DROPOFF task) if:",
         "RULE_PICKER_ADD_CONDITION": "Add condition",
         "RULE_PICKER_LINE_DISTANCE": "Distance (km)",
         "RULE_PICKER_LINE_WEIGHT": "Weight (kg)",
