changed: display supported conditions per target (delivery or task)

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -265,9 +265,9 @@
         "RULE_PICKER_LINE_PICKUP_DIFF_HOURS": "Difference (hours)",
         "RULE_PICKER_LINE_DROPOFF_DOORSTEP": "Doorstep dropoff",
         "RULE_PICKER_LINE_PACKAGES": "Packages",
-        "RULE_PICKER_LINE_ORDER_ITEMS_TOTAL": "Items total",
+        "RULE_PICKER_LINE_ORDER_ITEMS_TOTAL": "Food Tech Order Items total",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Delivery",
-        "RULE_PICKER_LINE_OPTGROUP_ORDER": "Order",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Deprecated",
         "ORDER_LIST_STATE": "State",
         "ORDER_LIST_PREPARATION_TIME": "Preparation time",
         "ORDER_LIST_PICKUP_TIME": "Pickup time",
