added: feature preview tag

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -34,6 +34,8 @@
         "cancelled": "Cancelled",
         "started": "In preparation",
         "ready": "Ready",
+        "FEATURE_PREVIEW": "Preview",
+        "FEATURE_PREVIEW_HELP": "The feature is available for demonstration and test purposes but may not be documented and/or feature complete. Please contact us on Slack #dev channel if you have any questions or feedback.",
         "ADMIN_DEFAULT_DELETION_ERROR_MESSAGE": "Could not delete",
         "ADMIN_PLEASE_UNLINK_PACKAGE_SET_BEFORE_DELETION": "Could not delete. Please unlink this package set from stores or delivery forms it may apply",
         "ADMIN_PLEASE_UNLINK_PRICING_RULE_SET_BEFORE_DELETION": "Could not delete. Please unlink this pricing from stores, restaurants or delivery forms it may apply",
@@ -195,7 +197,7 @@
         "ADMIN_WAREHOUSE_FORM_TITLE": "Create a warehouse",
         "ADMIN_WAREHOUSE_NAME_LABEL": "Name",
         "ADMIN_WAREHOUSE_ADDRESS_LABEL": "Adresse",
-        "ADMIN_INVOICING_TITLE": "Invoicing [PREVIEW]",
+        "ADMIN_INVOICING_TITLE": "Invoicing",
         "ADMIN_ORDERS_TO_INVOICE_TITLE": "Orders to invoice",
         "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE": "Period",
         "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE_SIMPLE": "Select month",
