--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -29,6 +29,8 @@
         "fulfilled": "Entregado",
         "cancelled": "Anulado",
         "ready": "Listo",
+        "FEATURE_PREVIEW": "Vista previa",
+        "FEATURE_PREVIEW_HELP": "Esta función está disponible con fines de demostración y prueba, pero puede no estar documentada y/o no estar completa. Contáctenos en el canal #dev de Slack si tiene alguna pregunta o comentario.",
         "DASHBOARD_ASSIGNED": "Asignado",
         "ADMIN_DASHBOARD_COURIER": "Mensajero·a",
         "ADMIN_DASHBOARD_COURIERS": "Mensajero·as",
@@ -638,7 +640,7 @@
         "DELIVERY_FORM_NAME_INSTRUCTION": "El nombre que aparecerá en el resumen del pedido y la factura",
         "DELIVERY_FORM_VAT_PRICE": "Precio con IVA incluido",
         "DELIVERY_FORM_EXVAT_PRICE" : "Precio sin IVA",
-        "ADMIN_INVOICING_TITLE": "Facturación [PREVISUALIZACIÓN]",
+        "ADMIN_INVOICING_TITLE": "Facturación",
         "ADMIN_ORDERS_TO_INVOICE_TITLE": "Pedidos a facturar",
         "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE": "Período",
         "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE_SIMPLE": "Seleccionar mes",
