--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -251,9 +251,9 @@
         "ORDER_TIMELINE_AFTER_CREATED_DESCRIPTION": "The restaurant has to confirm your order. In case of refusal no amount will be debited from your card",
         "ORDER_TIMELINE_AFTER_PICKED_TITLE": "The courier is coming!",
         "ORDER_TIMELINE_AFTER_PICKED_DESCRIPTION": "Get ready!",
-        "PRICING_ADD_RULE": "Add rule",
+        "PRICING_ADD_RULE": "Add rule (standard)",
         "PRICING_ADD_RULE_PER_TASK": "Add rule per point (advanced)",
-        "RULE_TARGET_DELIVERY": "Apply per order if:",
+        "RULE_TARGET_DELIVERY": "Apply once per order if:",
         "RULE_TARGET_TASK": "Apply per each point (PICKUP and/or DROPOFF task) if:",
         "RULE_PICKER_ADD_CONDITION": "Add condition",
         "RULE_PICKER_LINE_DISTANCE": "Distance (km)",
