added: LEGACY_TARGET_DYNAMIC type

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -35,6 +35,7 @@
         "started": "In preparation",
         "ready": "Ready",
         "FEATURE_PREVIEW": "Preview",
+        "DEPRECATED": "Deprecated",
         "FEATURE_PREVIEW_HELP": "The feature is available for demonstration and test purposes but may not be documented and/or feature complete. Please contact us on Slack #dev channel if you have any questions or feedback.",
         "ADMIN_DEFAULT_DELETION_ERROR_MESSAGE": "Could not delete",
         "ADMIN_PLEASE_UNLINK_PACKAGE_SET_BEFORE_DELETION": "Could not delete. Please unlink this package set from stores or delivery forms it may apply",
@@ -257,6 +258,8 @@
         "PRICING_ADD_RULE_PER_TASK": "Add rule per point (advanced)",
         "RULE_TARGET_DELIVERY": "Apply once per order if:",
         "RULE_TARGET_TASK": "Apply per each point (PICKUP and/or DROPOFF task) if:",
+        "RULE_LEGACY_TARGET_DYNAMIC": "Standard deliveries (one pickup, one dropoff): apply once per order; multi-point deliveries: apply per each point (PICKUP and/or DROPOFF task) if:",
+        "RULE_LEGACY_TARGET_DYNAMIC_HELP": "This rule is deprecated in favor of separate rules applied either once per order or per each point. Please consider migrating to the new format.",
         "RULE_PICKER_ADD_CONDITION": "Add condition",
         "RULE_PICKER_LINE_DISTANCE": "Distance (km)",
         "RULE_PICKER_LINE_WEIGHT": "Weight (kg)",
