--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -636,7 +636,9 @@
         "PM_RESTOFLASH": "Restoflash",
         "PM_CONECS": "Titres-restaurant",
         "PM_SWILE": "Swile",
-        "SWITCH_COMPLEX_DATEPICKER": "Select a date over multiples days", 
+        "SWITCH_COMPLEX_DATEPICKER": "Select a date over multiples days",
+        "DELIVERY_FORM_ADMIN_PRICE_ERROR": "Price could not be calculated. You can create the delivery, but don't forget to fix the pricing rule attached to the store.",
+        "DELIVERY_FORM_SHOP_PRICE_ERROR": "Price could not be calculated. You can create the delivery, we will contact you with the correct price.",
         "DELIVERY_FORM_PICKUP_INFORMATIONS": "Pickup Information",
         "DELIVERY_FORM_DROPOFF_INFORMATIONS": "Dropoff Information",
         "DELIVERY_FORM_PACKAGES": "Packages",
