--- a/js/app/i18n/locales/it.json
+++ b/js/app/i18n/locales/it.json
@@ -329,6 +329,8 @@
         "STORE": "Negozio",
         "RESTAURANTS_GROUP": "Gruppo di ristoranti",
         "DELIVERY_FORM": "Modulo di consegna",
+        "DELIVERY_FORM_ADMIN_PRICE_ERROR": "Impossibile calcolare il prezzo. Puoi creare la consegna, ma non dimenticare di correggere la regola del prezzo collegata a questo negozio.",
+        "DELIVERY_FORM_SHOP_PRICE_ERROR": "Impossibile calcolare il prezzo. Puoi creare la consegna, ti contatteremo con il prezzo corretto.",
         "ADMIN_PLEASE_UNLINK_PACKAGE_SET_BEFORE_DELETION": "Impossibile eliminare. Scollega questo insieme di pacchetti dai negozi o moduli di consegna a cui potrebbe essere applicato.",
         "ADMIN_PLEASE_UNLINK_PRICING_RULE_SET_BEFORE_DELETION": "Impossibile eliminare. Scollega questa tariffa dai negozi, ristoranti o moduli di consegna a cui potrebbe essere applicata.",
         "SHOW_DETAILS": "Mostra dettagli",
